Bug 76297 - "Removed" templates are never deleted
Summary: "Removed" templates are never deleted
Status: RESOLVED FIXED
Alias: None
Product: koffice
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KOffice Bug Wranglers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-02-27 18:31 UTC by Nicolas Goutte
Modified: 2005-05-23 00:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Goutte 2004-02-27 18:31:04 UTC
Version:            (using KDE KDE 3.2.0)
Installed from:    Compiled From Sources
Compiler:          gcc 3.3.1 -march=pentium2
OS:          Linux

When at template creation, a template is "removed", it is only logically removed but the file remains on disk.

(This is a follow up of bug #73537 .)
Comment 1 Fredrik Edemar 2005-05-23 00:10:18 UTC
SVN commit 417151 by fedemar:

Patch reviewed by David some weeks ago:
* Bug 76297: "Removed" templates are never deleted.
* Be sure every template name has an unique file name so they don't get overwritten when creating a new template.

BUG: 76297


 M  +44 -49    trunk/koffice/lib/kofficeui/koTemplateCreateDia.cc  
 M  +40 -13    trunk/koffice/lib/kofficeui/koTemplates.cc  
 M  +3 -1      trunk/koffice/lib/kofficeui/koTemplates.h