Patch reviewed by David some weeks ago: * Bug 76297: "Removed" templates are never deleted. * Be sure every template name has an unique file name so they don't get overwritten when creating a new template.

BUG: 76297

svn path=/trunk/koffice/; revision=417151